# Wayfarer

./: .gitignore  Cargo.toml
benches/: tracker_bench.rs
src/: image_tools.rs  init.rs  lib.rs  logger.rs  main.rs  stars.rs
src/perception/: camera_model.rs  centroiding.rs  mod.rs
src/startrack/: error.rs  mod.rs  quest.rs  solver.rs  stardat.rs  tracker.rs
src/tests/: benchmark.rs  dat_test.rs  mod.rs  quest_test.rs
