[package]
name = "wayfarer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "tracker_bench"
harness = false

[dependencies]
usno_gnc_catalog = { git = "https://git.nuntius.us/atmo/angel.git"} 
#usno_gnc_catalog = { path = "../angel"}
aether = { git = "https://github.com/AtmoPierce/aether.git", features = ["serde"]}
bincode = { version = "2.0.1", features = ["serde"] }
serde = "1.0.228"
image = "0.25.9"
opencv = {version="0.98.0", optional = true}
thiserror = "2.0.17"
heapless = "0.9.2"
indexmap = "2.12.1"
v4l = "0.14.0"

[net]
git-fetch-with-cli = true

[features]
opencv = ["dep:opencv"]
